# potamides

./: .copier-answers.yml  .pre-commit-config.yaml  LICENSE  README.md  conftest.py  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml  ci.yml
docs/: conf.py  index.md
src/potamides/: __init__.py  splinelib.py
src/potamides/_src/: __init__.py  accelerations.py  core.py  custom_types.py  likelihood.py  plot.py
src/potamides/_src/splinelib/: compat.py  data.py  funcs.py  opt.py
src/streamcurvature/: __init__.py  accelerations.py  custom_types.py  likelihood.py  plot.py  spline_fit.py  spline_fit_track.ipynb  spline_tools.py  splinelib.py  stream_func.py  utils.py
src/streamcurvature/_src/: __init__.py  accelerations.py  core.py  custom_types.py  likelihood.py  plot.py  spline_tools.py  splinelib.py
src/streamcurvature/_src/splinelib/: __init__.py  compat.py  data.py  funcs.py  opt.py
tests/: ignore-words.txt  test_accelerations.py  test_likelihood.py  test_package.py  test_plot.py
tests/baseline/: plot_hashes.json
tests/data/: example_spline.npz  test_acceleration_consistency.txt  test_arc_length_consistency.txt  test_arc_length_odeint_consistency.txt  test_compute_accelerations_all_parameters_consistency.txt  test_compute_accelerations_basic_consistency.txt  test_compute_accelerations_custom_halo_consistency.txt  test_compute_accelerations_rotated_consistency.txt  test_compute_accelerations_single_position_consistency.txt  test_compute_accelerations_translated_consistency.txt  test_compute_accelerations_with_disk_consistency.txt  test_compute_ln_likelihood_consistency.txt  test_compute_ln_likelihood_custom_sigma_consistency.txt  test_concavity_change_cost_fn_consistency.txt  test_curvature_consistency.txt  test_dThat_dgamma_consistency.txt  test_data_distance_cost_fn_consistency.txt  test_data_distance_cost_fn_with_sigmas_consistency.txt  test_default_cost_fn_consistency.txt  test_default_cost_fn_with_concavity_consistency.txt  test_get_angles_basic_consistency.txt  test_get_angles_edge_cases_consistency.txt  test_get_angles_normalized_consistency.txt  test_interpax_PPoly_from_scipy_UnivariateSpline_consistency.txt  test_kappa_consistency.txt  test_make_gamma_from_data_complex_consistency.txt  test_make_gamma_from_data_simple_consistency.txt  test_make_gamma_from_data_with_plateaus_consistency.txt  test_make_increasing_gamma_from_data_complex_consistency.txt  test_make_increasing_gamma_from_data_simple_consistency.txt  test_new_gamma_knots_from_spline_consistency.txt  test_new_gamma_knots_from_spline_more_knots_consistency.txt  test_optimize_spline_knots_consistency.txt  test_optimize_spline_knots_with_fixed_mask_consistency.txt  test_point_to_point_distance_complex_consistency.txt  test_position_consistency.txt  test_reduce_point_density_consistency.txt  test_reduce_point_density_with_mean_consistency.txt  test_speed_consistency.txt  test_spherical_position_consistency.txt  (+3 more)
tests/splinelib/: __init__.py  test_compat.py  test_data.py  test_funcs.py  test_opt.py
